--- a/templates/log_plant.html
+++ b/templates/log_plant.html
@@ -22,23 +22,33 @@
         
         <!-- Location -->
         <div class="form-section">
-        <h2>Location Selection</h2>
-            <label><input type="checkbox" name="locations" value="Olive Grove"> Olive Grove</label>
-            <label><input type="checkbox" name="locations" value="The Plateau"> The Plateau</label>
-            <label><input type="checkbox" name="locations" value="Field"> Field</label>
+        <h2>Location found</h2>
+            <label><input type="radio" name="locations" value="Olive Grove" required> Olive Grove</label>
+            <label><input type="radio" name="locations" value="The Plateau"> The Plateau</label>
+            <label><input type="radio" name="locations" value="Field"> Field</label>
         </div>
         
         <!-- Status -->
         <div class="form-section">
-        <h2>Status</h2>
+        <h2>Current status</h2>
             <label><input type="radio" name="status" value="Present" required> Present</label>
             <label><input type="radio" name="status" value="Blooming"> Blooming</label>
-            <label><input type="radio" name="status" value="Seeding"> Seeding</label>
+            <label><input type="radio" name="status" value="Seed ripening"> Seed ripening</label>
+            <label><input type="radio" name="status" value="Seed ready for collection"> Seed ready for collection</label>
+            <label><input type="radio" name="status" value="Seed already dispersed"> Seed already dispersed</label>
         </div>
 
         <!-- Week number -->
-        <label for="week">Week number:</label>
-        <input type="number" id="week" name="week" min="1" max="56" required>
+        <div class="form-section">
+            <label for="week">Current week of year:</label>
+            <input type="number" id="week" name="week" min="1" max="52" required>
+        </div>
+
+        <!-- Year -->
+        <div class="form-section">
+            <label for="year">Current year:</label>
+            <input type="number" id="year" name="year" min="1900" max="2100" required>
+        </div>
 
         <br><br>
         <button type="submit">Log Plant</button>
