--- a/templates/view_logs.html
+++ b/templates/view_logs.html
@@ -12,12 +12,14 @@
 </head>
 <body>
     <h1>Logged Plant Data</h1>
+    <a href="/">Back to Home</a>
     <table class="data">
         <thead>
             <tr>
                 <th>Common plant name</th>
-                <th>Location(s)</th>
-                <th>Status at time of log</th>
+                <th>Location</th>
+                <th>Status</th>
+                <th>Time</th>
             </tr>
         </thead>
         <tbody>
@@ -26,10 +28,10 @@
                 <td>{{ log[1] }}</td>  <!-- Common name -->
                 <td>{{ log[2] }}</td>  <!-- Location -->
                 <td>{{ log[3] }}</td>  <!-- Status -->
+                <td>{{ log[4] }}</td>  <!-- Time (Year, Week) -->
             </tr>
             {% endfor %}
         </tbody>
     </table>
-    <a href="/">Back to Home</a>
 </body>
 </html>
