reformat time column to hold date

--- a/templates/view_logs.html
+++ b/templates/view_logs.html
@@ -19,7 +19,7 @@
                 <th>Common plant name</th>
                 <th>Location</th>
                 <th>Status</th>
-                <th>Time</th>
+                <th>Date</th>
             </tr>
         </thead>
         <tbody>
@@ -28,7 +28,7 @@
                 <td>{{ log[1] }}</td>  <!-- Common name -->
                 <td>{{ log[2] }}</td>  <!-- Location -->
                 <td>{{ log[3] }}</td>  <!-- Status -->
-                <td>{{ log[4] }}</td>  <!-- Time (Year, Week) -->
+                <td>{{ log[4] }}</td>  <!-- Date -->
             </tr>
             {% endfor %}
         </tbody>
