--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,16 @@
 <body>
     <h1>Native Plant Data</h1>
 
+    {% if current_user.username %}
+        <p>Welcome, {{ current_user.username }}!</p>
+        <a href="/logout">Logout</a>
+    {% else %}
+        <a href="/login">Login</a> | <a href="/signup">Sign up</a>
+    {% endif %}
+
     <!-- Link to view logs -->
-    <a href="/view_logs">View Logs</a>
+    <br><br>
+    <a href="/view_logs">View Your Logs</a>
 
     <!-- Search form -->
     <form method="POST" action="/">
