--- a/templates/view_logs.html
+++ b/templates/view_logs.html
@@ -1,8 +1,5 @@
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>View Plant Logs</title>
     <style>
         .data { width: 100%; border-collapse: collapse; }
@@ -11,7 +8,8 @@
     </style>
 </head>
 <body>
-    <h1>Logged Plant Data</h1>
+    <h1>Logged Plant Data for {{ current_user.username }}</h1>
+
     <a href="/">Back to Home</a>
     <table class="data">
         <thead>
