add saved location system, other minor tweaks

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,10 @@
 
     <!-- Link to view logs -->
     <br><br>
-    <a href="/view_logs">View Your Logs</a>
+    <a href="/view_logs">View Logs</a>
+    <br>
+    <!-- Link to manage locations -->
+    <a href="/manage_locations">Manage Saved Locations</a>
 
     <!-- Search form -->
     <form method="POST" action="/">
