--- a/templates/view_logs.html
+++ b/templates/view_logs.html
@@ -24,7 +24,7 @@
                 <th>Location</th>
                 <th>Status</th>
                 <th>Date</th>
-                <th>Action</th>
+                <th>Manage log</th>
             </tr>
         </thead>
         <tbody>
