--- a/templates/log_plant.html
+++ b/templates/log_plant.html
@@ -29,14 +29,17 @@
         
         <!-- Location -->
         <div class="form-section">
-            <h2>Location found</h2>
-            <label for="locations">Enter location:</label>
-            <input type="text" id="locations" name="locations" placeholder="Enter location" required>
+            <label for="locations">Choose a location:</label>
+            <select id="locations" name="locations" required>
+                <option value="" selected>-- Select a location --</option>
+                {% for location in locations %}
+                    <option value="{{ location[2] }}">{{ location[2] }}</option>
+                {% endfor %}
+            </select>
         </div>
         
         <!-- Status -->
         <div class="form-section">
-            <h2>Current status</h2>
             <label><input type="radio" name="status" value="Present" required> Present</label>
             <label><input type="radio" name="status" value="Blooming"> Blooming</label>
             <label><input type="radio" name="status" value="Seed ready for collection"> Seed ready for collection</label>
@@ -46,7 +49,7 @@
 
         <!-- Date Input -->
         <div>
-            <h2>Date</h2>
+            <label>Date:</label>
             <input type="number" id="month" name="month" min="1" max="12" placeholder="MM" required>
             <input type="number" id="day" name="day" min="1" max="31" placeholder="DD" required>
             <input type="number" id="year" name="year" min="1000" max="9999" placeholder="YYYY" required>
