--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,7 +4,7 @@
     <title>Sign Up</title>
 </head>
 <body>
-    <a href="/">Back to Home</a> <!-- Added Home Link -->
+    <a href="/">Back to Home</a>
     <h1>Sign Up</h1>
     <form method="POST" action="/signup">
         <label for="username">Username:</label>
